# scratchpad-o11y

./: .dockerignore  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
python/: Dockerfile  requirements.txt  server.py
python-server/: Dockerfile  server.py
rust/: Dockerfile  main.rs
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: main.rs  middleware.rs
